[package]
name = "jamespy"
version = "0.2.0"
edition = "2021"

[dependencies]
jamespy_data = { path = "jamespy_data" }
jamespy_events = { path = "jamespy_events" }
jamespy_config = { path = "jamespy_config" }
jamespy_commands = { path = "jamespy_commands" }

sqlx = { workspace = true }
tokio = { workspace = true }
poise = { workspace = true }
serenity = { workspace = true }
reqwest = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }

tracing-subscriber = "0.3.18"


[workspace]
members = [ "jamespy_config", "jamespy_data", "jamespy_events", "jamespy_config", "jamespy_commands"]

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "signal", "parking_lot"] }
sqlx = { version = "0.7", features = ["macros", "postgres", "runtime-tokio-rustls", "chrono"] }
reqwest = "0.12"
rand = "0.8"
small-fixed-array = { version = "0.4.5", features = ["nightly"] }
chrono = "0.4"
parking_lot = "0.12.1"
dashmap = "5.5.3"
unicode_names2 = "1.2.2"
image = "0.25.2"
unicode-segmentation = "1.12.0"
emojis = "0.6.4"
tracing = "0.1.40"

[workspace.dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
#path = "../serenity"
features = ["temp_cache"]
default-features = false
branch = "next"


# User apps on serenity-next & single command manual cooldowns
[workspace.dependencies.poise]
git = "https://github.com/jamesbt365/poise"
features = ["cache", "unstable"]
branch = "serenity-next-merged"

# patch for developing locally.
#[patch."https://github.com/serenity-rs/serenity".serenity]
#path = "../serenity"


[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
