[package]
name = "jamespy_commands"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jamespy_data = { path = "../jamespy_data" }
jamespy_events = { path = "../jamespy_events" }
jamespy_config = { path = "../jamespy_config" }

serenity = { workspace = true }
poise = { workspace = true }
sqlx = { workspace = true }
reqwest = { workspace = true }
songbird = { workspace = true }

small-fixed-array = { workspace = true }
rand = { workspace = true }
bb8-redis = "0.13.1"

tracing-subscriber = "0.3.18"
tracing = "0.1.40"
libc = "0.2.152"
sysinfo = "0.30.5"
regex = "1.10.3"
