[package]
name = "jamespy_config"
version = "0.1.2-rc1"
edition = "2021"

[dependencies]

serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next" }
poise = { git = "https://github.com/serenity-rs/poise", branch = "serenity-next" }
tokio = { version = "1.33.0", features = ["macros", "signal", "rt-multi-thread", "net", "io-util"] }
serde = "1.0.192"
serde_json = "1.0.108"
regex = "1.9.3"
base64 = "0.21.5"
