[package]
name = "jamespy_config"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next" }
poise = { git = "https://github.com/serenity-rs/poise", branch = "serenity-next" }
serde = "1.0.192"
serde_json = "1.0.108"
regex = "1.9.3"
base64 = "0.21.5"
