[package]
name = "jamespy_data"
version = "0.2.0"
edition = "2021"

[dependencies]
jamespy_config = {path = "../jamespy_config" }

sqlx = { workspace = true }
tokio = { workspace = true }
poise = { workspace = true }
serenity = { workspace = true }
bb8-redis = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
tracing = "0.1.40"
dashmap = "5.5.3"
parking_lot = "0.12.1"
