[package]
name = "jamespy_data"
version = "0.2.0"
edition = "2021"

[dependencies]
jamespy_config = {path = "../jamespy_config" }

sqlx = { workspace = true }
tokio = { workspace = true }
poise = { workspace = true }
serenity = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true}
tracing = { workspace = true }
rustrict.workspace = true
perspective_api.workspace = true
