[package]
name = "jamespy_events"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jamespy_data = { path = "../jamespy_data" }
jamespy_config = { path = "../jamespy_config" }


serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next" }
poise = { git = "https://github.com/serenity-rs/poise", branch = "serenity-next" }
sqlx = { version = "0.7.1", features = ["macros", "runtime-tokio-rustls", "postgres", "time", "chrono"] }
tokio = { version = "1.33.0", features = ["macros", "signal", "rt-multi-thread", "net", "io-util"] }


serde = "1.0.192"
serde_json = "1.0.108"
bb8-redis = "0.13.1"
regex = "1.9.3"
chrono = "0.4.31"
fs_extra = "1.3.0"
