[package]
name = "jamespy_events"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jamespy_data = { path = "../jamespy_data" }
jamespy_config = { path = "../jamespy_config" }

serenity = { workspace = true }
poise = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
bb8-redis = { workspace = true }
small-fixed-array = { workspace = true }


serde_json = "1.0"
regex = "1.9.3"
chrono = "0.4.31"
fs_extra = "1.3.0"
nonmax = "0.5.5"
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3.30"
futures-channel = "0.3.30"
serde = "1.0.203"
jamespy_websocket = { version = "0.1.0", path = "../jamespy_websocket" }
