[package]
name = "jamespy_events"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jamespy_data = { path = "../jamespy_data" }
jamespy_config = { path = "../jamespy_config" }
jamespy_filter = { path = "../jamespy_filter" }
jamespy_ansi = { path = "../jamespy_ansi" }
jamespy_starboard = { path = "../jamespy_starboard" }

serenity = { workspace = true }
poise = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
small-fixed-array = { workspace = true }


serde_json = "1.0"
regex.workspace = true
chrono = "0.4.31"
fs_extra = "1.3.0"
nonmax = "0.5.5"
futures-util = "0.3.30"
futures-channel = "0.3.30"
serde = "1.0.203"
resvg = "0.44.0"
usvg = "0.44.0"
image.workspace = true
unicode-segmentation.workspace = true
emojis.workspace = true
rustrict.workspace = true
aformat = "0.1.8"
