[package]
name = "jamespy_utils"
version = "0.1.2-rc1"
edition = "2021"

[dependencies]
jamespy_data = { path = "../jamespy_data" }

serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next" }
poise = { git = "https://github.com/serenity-rs/poise", branch = "serenity-next" }
rand = "0.8.5"
fs_extra = "1.3.0"
