[package]
name = "moth_config"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = { workspace = true }
serenity = { workspace = true }
serde = "1.0"
serde_json = "1.0"
regex.workspace = true
base64 = "0.21.5"
